# clean_architecture

./: .gitignore  README.md  pyproject.toml  pyvenv.cfg
src/to_do/: __main__.py  dispatcher.py
src/to_do/application/: commands.py  dtos.py  handlers.py  interfaces.py
src/to_do/domain/: model.py
src/to_do/infrastructure/repositories/: in_memory.py
