[tool.poetry]
name = "clean-architecture"
version = "0.1.0"
description = "Playground"
authors = ["Desireé Torrente Ramírez <desiree.torrente@eventbrite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
