[tool.poetry]
name = "to-do"
version = "0.1.0"
description = "Playground"
authors = ["Desireé Torrente Ramírez <desiree.torrente@eventbrite.com>"]
readme = "README.md"
packages = [
    { include = "to_do", from = "src" },
]

[tool.poetry.dependencies]
python = "~3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
